objects/mcdm_15__QuickSendJourney__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__Description__c</fullName>
        <description>Description of the Journey in Marketing Cloud</description>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__EndDate__c</fullName>
        <description>The end date and time of the Quick Send Message</description>
        <inlineHelpText>Fecha y hora finales de la trayectoria de envío rápido</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ExternalJourneyId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID of the linked journey for this quick send message</description>
        <externalId>true</externalId>
        <label>External Journey Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate when a Quick Send Journey is active.</description>
        <inlineHelpText>Indica que una trayectoria de envío rápido está activa.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__JourneyName__c</fullName>
        <description>Name of the Journey in Marketing Cloud</description>
        <label>Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__LinkedBusinessUnit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked business unit associated with this quick send message</description>
        <label>Linked Business Unit</label>
        <referenceTo>mcdm_15__LinkedBusinessUnit__c</referenceTo>
        <relationshipName>Quick_Send_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__MessageType__c</fullName>
        <description>Type of the Journey Messaging Activity</description>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__StartDate__c</fullName>
        <description>The start date and time of the Quick Send Journey</description>
        <inlineHelpText>Fecha y hora de inicio de la trayectoria de envío rápido</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Quick Send Message</label>
    <nameField>
        <displayFormat>DM-QSJN-{00000}</displayFormat>
        <label>Quick Send Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Send Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>mcdm_15__mcdm_date_validation</fullName>
        <active>true</active>
        <description>This validates the end date is not before the start date on the quick send message record.</description>
        <errorConditionFormula>mcdm_15__EndDate__c &lt;  mcdm_15__StartDate__c</errorConditionFormula>
        <errorDisplayField>mcdm_15__StartDate__c</errorDisplayField>
        <errorMessage>The quick send message end date should not be before the start date.</errorMessage>
    </validationRules>
</CustomObject>